[package]
name = "sqlx-conditional-queries-layering"
version = "0.1.6"
edition = "2021"
repository = "https://github.com/o-dasher/sqlx-conditional-queries-layering.git"
description = "Query templating for sqlx-conditional-queries."
license = "MIT"

[workspace]
members = ["example"]

[dependencies]
with_builtin_macros = "0.1.0"
