[package]
name = "example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
envy = "0.4.2"
paste = "1.0.15"
rand = "0.8.5"
serde = { version = "1.0.203", features = ["serde_derive"] }
sqlx = { version = "0.7.4", features = ["postgres", "bigdecimal", "runtime-tokio"] }
sqlx-conditional-queries = { version = "0.1.4", features = ["postgres"] }
sqlx-conditional-queries-layering = { path = "../" }
tokio = { version = "1.38.0", features = ["full"] }
with_builtin_macros = "0.1.0"
